--- a/src/assets/style/pdf_viewer.css
+++ b/src/assets/style/pdf_viewer.css
@@ -19,12 +19,6 @@
   opacity: 0;
 }
 
-canvas {
-  border: 1px solid rgb(187, 187, 187);
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .highlight {
   position: absolute;
   background: rgb(255, 46, 81);
@@ -36,11 +30,13 @@ canvas {
 .pdf-controls-container {
   display: flex;
   justify-content: flex-start;
+  background: var(--background-secondary);
+  padding: 12px;
+  border-radius: 0 0 8px 8px;
 }
 
 .pdf-controls {
   display: flex;
-  padding: 16px 8px 0 0;
   justify-content: center;
   align-items: center;
 }
