--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -37,7 +37,7 @@
 
   --shadow-color: rgba(0, 0, 0, 0.1);
   --container-box-shadow: 0 4px 8px var(--shadow-color);
-  --btn-box-shadow: 0 4px 8px var(--shadow-color);
+  --btn-box-shadow: 0px 2px 8px 0px var(--shadow-color);
 
   --color-black: #343a40;
 }
