--- a/src/assets/style/search_component.css
+++ b/src/assets/style/search_component.css
@@ -45,7 +45,8 @@
 .input-field {
   font-weight: 300;
   font-size: 16px;
-  min-width: 50%;
+  min-width: 186px;
+  width: 100%;
   padding: 10px 8px;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -61,21 +62,6 @@
 .search-btn {
   min-width: 120px;
 }
-
-.btn-primary {
-  background-color: var(--primary-blue);
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn-primary:hover {
-  background-color: darken(var(--primary-blue), 10%);
-}
-
 .progress-section {
   margin-bottom: 20px;
 }
@@ -108,6 +94,11 @@
   margin-top: 0;
 }
 
+.page-info-container {
+  width: 100%;
+  justify-content: space-between;
+}
+
 .result-item {
   padding: 18px 0px;
   align-items: center;
@@ -116,10 +107,19 @@
   justify-content: space-between;
 }
 
+.page-info {
+  display: flex;
+  flex-direction: column;
+}
+
 .file-name {
   cursor: pointer;
   font-weight: bold;
   color: var(--primary-blue);
+}
+
+.open-pdf-btn {
+  height: 32px;
 }
 
 .page-list {
